# lwir-compress

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
include/: bitdepth.hpp  config.hpp  decision.hpp  encoder.hpp  frame.hpp  pipeline.hpp  residual.hpp  stats.hpp
src/: bitdepth.cpp  config.cpp  decision.cpp  encoder.cpp  main.cpp  pipeline.cpp  residual.cpp  stats.cpp
